--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 </head>
 
 <body>
-    <div class="lds-dual-ring center display-none"></div>
-    <main>
+    <div id="app-loader" class="lds-dual-ring center"></div>
+
+    <main hidden>
         <button id="open-menu-btn" class="ripple">
             <img class="icon-small-28" src="./Resources/assets/images/icons/menu.png" alt="">
         </button>
@@ -85,7 +86,7 @@
             </div>
 
             <!-- Hourly weather -->
-            <div id="hourly-weather-wrapper" class="lower-panel-body">
+            <div id="hourly-weather-wrapper" class="lower-panel-body" visible="false">
                 <div class="flex-container weather-box">
                     <div>
                         <h1>14:00</h1>
