--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 
 
     </main>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./Script/script.js"></script>
 </body>
 
