--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
         </button>
         <!-- Currently weather section -->
         <section id="current-day-weather-container">
-            <h1 class="location-label">Brasov</h1>
+            <h1 class="location-label"></h1>
 
             <div class="flex-container" id="temperature-summary-container">
                 <div>
-                    <img src="./Resources/assets/images/summary-icons/clear-day-white.png" alt="">
+                    <img id ="currentlyIcon" src="./Resources/assets/images/summary-icons/clear-day-white.png" alt="">
                 </div>
                 <div>
-                    <h1 id="degress-label">20&#176</h1>
-                    <p id="summary-label">Clear Day</p>
+                    <h1 id="degress-label"></h1>
+                    <p id="summary-label"></p>
                 </div>
             </div>
 
             <div class="flex-container" id="humidity-wind-container">
                 <div>
                     <img class="icon-small-30" src="./Resources/assets/images/icons/humidity.png" alt="">
-                    <span>20%</span>
+                    <span id="humidity-label"></span>
                 </div>
                 <div>
                     <img class="icon-small-30" src="./Resources/assets/images/icons/wind-speed-flag.png" alt="">
-                    <span>3 m/h</span>
+                    <span id="wind-speed-label"></span>
                 </div>
             </div>
         </section>
@@ -69,7 +69,7 @@
 
             <!-- Daily weather -->
             <div id="daily-weather-wrapper" class="lower-panel-body">
-                <div class="flex-container weather-box">
+                <div class="flex-container weather-box display-none">
                     <div>
                         <h1>Sunday</h1>
                     </div>
@@ -87,7 +87,7 @@
 
             <!-- Hourly weather -->
             <div id="hourly-weather-wrapper" class="lower-panel-body" visible="false">
-                <div class="flex-container weather-box">
+                <div class="flex-container weather-box display-none">
                     <div>
                         <h1>14:00</h1>
                     </div>
@@ -117,7 +117,7 @@
                     <input type="text" placeholder="Location" id="location-input">
                     <br>
                     <button id="add-city-btn" class="ripple disabled" disabled>Add City</button>
-                    <h1 class="location-label">Brasov</h1>
+                    <h1 class="location-label"></h1>
                 </div>
 
                 <!-- saved cities -->
